@@ -113,9 +113,9 @@ pg_id[TRADEDOUBLER] = [];
 pg_id[TDPRIVATE]    = [];
 pg_id[ZANOX]        = [];
 
-pg_id[AFFILINET][DEFAULT]    = '';
-pg_id[TRADEDOUBLER][DEFAULT] = '';
-pg_id[TDPRIVATE][DEFAULT]    = '';
+pg_id[AFFILINET][DEFAULT]    = '&cl=4383336303236323131303&bm=7&bmcl=8363036313236323131303&cp=10000000000&ag=1&crid=10000000000';
+pg_id[TRADEDOUBLER][DEFAULT] = '&cl=4383336303236323131303&bm=56&bmcl=1393238373136323131303&cp=10000000000&ag=1&crid=10000000000';
+pg_id[TDPRIVATE][DEFAULT]    = '&cl=4383336303236323131303&bm=56&bmcl=5333138363236323131303&cp=10000000000&ag=1&crid=10000000000';
 pg_id[ZANOX][DEFAULT]    = '';
 
 
