@@ -1,0 +1,9 @@
+<?php
+
+$to = 'christoph.starkmann@explido.de';
+$subject = 'Explido LinkGen Feedback';
+$message;
+
+$mail_sent = mail($to, $subject, $message);
+
+?>
